@@ -5,6 +5,7 @@
 #include <QFile>
 #include <KIcon>
 #include <KMessageBox>
+#include <KInputDialog>
 #include <kmimetypetrader.h>
 #include "packagemodel.h"
 
@@ -12,7 +13,7 @@ EditPage::EditPage(QWidget *parent)
         : QTreeView(parent)
 {
     m_contextMenu = new KMenu();
-    QAction *del = m_contextMenu->addAction(KIcon("window-close"), "Delete");
+    QAction *del = m_contextMenu->addAction(KIcon("window-close"), i18n("Delete"));
     connect(del, SIGNAL(triggered(bool)), this, SLOT(doDelete(bool)));
 
     setContextMenuPolicy(Qt::CustomContextMenu);
@@ -30,8 +31,9 @@ void EditPage::doDelete(bool)
     QModelIndex selected = items.at(0); // only one can be selected
     QString path = selected.data(PackageModel::UrlRole).toString();
     QString name = selected.data(Qt::DisplayRole).toString();
+    QString dialogText = i18n("Are you sure you want to delete this file: ");
     int code = KMessageBox::warningContinueCancel(this, 
-                  "Are you sure you want to delete '" + name + "'?");
+                  dialogText + "'" + name + "'?");
     if (code == KMessageBox::Continue)
         QFile::remove(path);
 }
@@ -56,9 +58,19 @@ void EditPage::findEditor(const QModelIndex &index)
     QStringList mimetypes = index.data(PackageModel::MimeTypeRole).toStringList();
     foreach(const QString &mimetype, mimetypes) {
         QString target = index.data(PackageModel::UrlRole).toString();
-        if (mimetype == "text/metadata") {
+        if (mimetype == "[plasmate]/metadata") {
             emit loadMetaDataEditor(target);
             return;
+        }
+        if (mimetype == "[plasmate]/new") {
+            QString dialogText = i18n( "Enter a name for the new file:" );
+            QString file = KInputDialog::getText(QString(), dialogText);
+            if (!file.isEmpty()) {
+                file = target + file;
+                QFile fl(file);
+                fl.open(QIODevice::ReadWrite); // create the file
+                fl.close();
+            }
         }
         KService::List offers = KMimeTypeTrader::self()->query(mimetype, "KParts/ReadWritePart");
         kDebug() << mimetype;
